[tool.poetry]
name = "runtime-config-py"
version = "0.1.0"
description = ""
authors = ["Aleksey Petrunnik <petrunnik.a@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {version = "^3.8.1", extras = ["speedups"]}
pydantic = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-mock = "^3.8.2"
autopep8 = "^1.6.0"
black = "^22.8.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "0.971"
pre-commit = "^2.19.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ['./src']
testpaths = ["tests"]

[tool.black]
target_version = ['py38']
line-length = 119
skip_string_normalization = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
disallow_any_generics = true
disallow_untyped_defs = true
exclude = "tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
